tests/NormalTests/paczka1/small_fuzzy/79288536.err
Error in line 1: keyW S174 10,1
Error in line 3: hqHgRwY ^983 41,1
Error in line 6: hqHgRwY A983 59,8
Error in line 2: keyW S582 89,7
Error in line 13: keyW S174 74,4
